--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -102,6 +102,10 @@
   }
 }
 
+.hero .section-description {
+ color: rgba(157, 164, 189, 0.6);
+}
+
 .hero-social-list {
   position: relative;
 
@@ -113,6 +117,11 @@
 
 .hero-social-item {
   padding: 0px 20px;
+
+  &:hover,
+  &:focus {
+    color: #FF6C00;
+  }
 }
 
 .hero-social-link {
