--- a/src/partials/copyright.html
+++ b/src/partials/copyright.html
@@ -1,6 +1,13 @@
 <div class="copyright">
   <div class="container copyright-container">
-    <div class="copyright-social">текстовые социалки</div>
+    <ul class="social-text-list">
+      <li class="social-text-item">
+        <a href="#" class="social-text-link">Instagram</a>
+      </li>
+      <li class="social-text-item">
+        <a href="#" class="social-text-link">Youtube</a>
+      </li>
+    </ul>
     <p class="copyright-text">&copy; Copyright 2020</p>
   </div>
 </div>
