--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -45,3 +45,10 @@
     }
   }
 }
+
+.contact-position {
+  @media screen and (min-width: $tablet) and (max-width: calc(#{$desktop} - 1px)) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
