--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -59,6 +59,10 @@
   color: $header-price-text;
 }
 
+.section-discription--white {
+  color: $white-text-color;
+}
+
 .section-discription--gray::before {
   background: $header-price-text;
 }
