--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -26,47 +26,43 @@
     <div class="section contact">
       <div class="container">
         <h2 class="section-title section-title--white footer-title">Контакты</h2>
-        <address class="address">
-          <ul class="address-list">
-            <li class="address-item">
-              <a href="" class="address-link">
-
-                <svg class="address-icon">
-                  <use href="./images/sprite.svg#icon-location"></use>
-                </svg>
-                <span>
-                  ул. Васильковая, 7А
-                  <br />
-                  Киев, 08132
-                </span>
-
-              </a>
-            </li>
-            <li class="address-item">
-              <a href="tel:+380441111111" class="address-link">
-
-                <svg class="address-icon">
-                  <use href="./images/sprite.svg#icon-phone"></use>
-                </svg>
-                <span>+38 044 111 11 11</span>
-
-              </a>
-            </li>
-            <li class="address-item">
-              <a href="mailto:info@devstudio.com" class="address-link address-link--line">
-
-                <svg class="address-icon">
-                  <use href="./images/sprite.svg#icon-mail"></use>
-                </svg>
-                <span>barbershop@email.com</span>
-
-              </a>
-            </li>
-          </ul>
-        </address>
-        <div class="working-hours">
-          <h3 class="section-description section-discription--white">время работы</h3>
-          <p class="working-hours-text">Ежедневно с 9:00 до 22:00</p>
+        <div class="contact-position">
+          <address class="address">
+            <ul class="address-list">
+              <li class="address-item">
+                <a href="" class="address-link">
+                  <svg class="address-icon">
+                    <use href="./images/sprite.svg#icon-location"></use>
+                  </svg>
+                  <span>
+                    ул. Васильковая, 7А
+                    <br />
+                    Киев, 08132
+                  </span>
+                </a>
+              </li>
+              <li class="address-item">
+                <a href="tel:+380441111111" class="address-link">
+                  <svg class="address-icon">
+                    <use href="./images/sprite.svg#icon-phone"></use>
+                  </svg>
+                  <span>+38 044 111 11 11</span>
+                </a>
+              </li>
+              <li class="address-item">
+                <a href="mailto:info@devstudio.com" class="address-link address-link--line">
+                  <svg class="address-icon">
+                    <use href="./images/sprite.svg#icon-mail"></use>
+                  </svg>
+                  <span>barbershop@email.com</span>
+                </a>
+              </li>
+            </ul>
+          </address>
+          <div class="working-hours">
+            <h3 class="section-description section-discription--white">время работы</h3>
+            <p class="working-hours-text">Ежедневно с 9:00 до 22:00</p>
+          </div>
         </div>
       </div>
     </div>
