--- a/src/sass/components/_copyright.scss
+++ b/src/sass/components/_copyright.scss
@@ -5,12 +5,11 @@
 .copyright-container {
   display: flex;
   flex-direction: column;
-  height: 138px;
+  align-items: center;
   padding-top: 44px;
   padding-bottom: 44px;
 
   @media screen and (min-width: $tablet) {
-    height: 128px;
     flex-direction: row-reverse;
     padding-top: 56px;
     padding-bottom: 56px;
@@ -19,6 +18,7 @@
 
 .copyright-text {
   margin: 0;
+  margin-right: auto;
   padding: 0;
 
   font-weight: 600;
