--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,50 +3,51 @@
 * Все паршалы подключаются сюда.
 */
 // Стили для файла с примером HTML-фрагмента
-@import './utils/normalize.scss';
-@import './utils/variables';
-@import './utils/breakpoints';
-@import './layouts/base';
+@import "./utils/normalize.scss";
+@import "./utils/variables";
+@import "./utils/breakpoints";
+@import "./layouts/base";
 
 // для тестирования
-@import './test/example';
-@import './test/test1';
-@import './test/test2';
+@import "./test/example";
+@import "./test/test1";
+@import "./test/test2";
 
 // служебные
-@import './utils/visually-hidden';
-@import './utils/img';
-@import './utils/wrap';
-@import './utils/backdrop';
+@import "./utils/visually-hidden";
+@import "./utils/img";
+@import "./utils/wrap";
+@import "./utils/backdrop";
 
 // вспомогательное
-@import './layouts/section';
-@import './layouts/container';
-@import './components/social';
-@import './components/cards';
+@import "./layouts/section";
+@import "./layouts/container";
+@import "./components/social";
+@import "./components/cards";
 
 // Основа
-@import './layouts/header';
-@import './layouts/hero';
-@import './layouts/about-us';
-@import './layouts/price';
-@import './layouts/feature';
-@import './layouts/masters';
-@import './layouts/gallery';
-@import './layouts/footer';
+@import "./layouts/header";
+@import "./layouts/hero";
+@import "./layouts/about-us";
+@import "./layouts/price";
+@import "./layouts/feature";
+@import "./layouts/masters";
+@import "./layouts/gallery";
+@import "./layouts/footer";
 
 // components
-@import './components/logo';
-@import './components/menu';
-@import './components/overlay';
-@import './components/menu-mob';
-@import './components/dots';
-@import './components/slider-button';
-@import './components/contacts';
-@import './components/buttons';
-@import './components/aside';
-@import './components/text';
-@import './components/social';
-@import './components/form-footer';
-@import './components/address';
-@import './components/copyright';
+@import "./components/logo";
+@import "./components/menu";
+@import "./components/overlay";
+@import "./components/menu-mob";
+@import "./components/dots";
+@import "./components/slider-button";
+@import "./components/contacts";
+@import "./components/buttons";
+@import "./components/aside";
+@import "./components/text";
+@import "./components/social";
+@import "./components/form-footer";
+@import "./components/address";
+@import "./components/copyright";
+@import "./components/social-text";
