--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -51,8 +51,7 @@
   margin-right: 20px;
   width: 60px;
   height: 1px;
-  color: rgba(157, 164, 189, 0.6);
-  background-color: rgba(157, 164, 189, 0.6);
+  background-color: $black-text-color;
 }
 
 .section-discription--gray {
