--- a/src/sass/components/_social-text.scss
+++ b/src/sass/components/_social-text.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   margin-right: -20px;
-  margin-left: 80px;
+  margin-left: auto;
   @media screen and (max-width: $tablet) {
     margin-bottom: 20px;
   }
