создает якоря для навигации

--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -1,6 +1,6 @@
 <section class="section price">
   <div class="container">
-    <h3 class="section-description section-discription--gray">
+    <h3 id="price" class="section-description section-discription--gray">
       Проведи время в компании лучших
       мастеров</h3>
     <h2 class="price-title section-title section-title--white">Услуги и цены</h2>
