--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
 				<use href="../src/images/sprite.svg#icon-logo"></use>
 			</svg>
 		</a>
-		
+
 		<button type="button" class="nav-button is-open" data-menu-button>
 			<svg class="menu-icon" width="40" height="40" aria-label="переключатель мобильного меню">
 				<use class="menu-icon-open" href="./images/sprite.svg#menu-icon-open"></use>
@@ -16,10 +16,10 @@
 		<div class="menu is-open" data-menu>
 			<nav class="nav">
 				<ul class="nav-list">
-					<li class="nav-item"><a href="#" class="nav-link">О нас</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">Услуги и цены</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">Мастера</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">Контакты</a></li>
+					<li class="nav-item"><a href="#about-us" class="nav-link">О нас</a></li>
+					<li class="nav-item"><a href="#price" class="nav-link">Услуги и цены</a></li>
+					<li class="nav-item"><a href="#masters" class="nav-link">Мастера</a></li>
+					<li class="nav-item"><a href="#contacts" class="nav-link">Контакты</a></li>
 				</ul>
 			</nav>
 
