--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -1,18 +1,14 @@
 <section class="section master-section">
   <div class="container master-container">
     <div class="section-description-box">
-      <p class="section-description black-color">для настоящих ценителей атмосферы</p>
+      <p id="masters" class="section-description black-color">для настоящих ценителей атмосферы</p>
       <h2 class="section-title masters-title">Наши мастера</h2>
     </div>
     <ul class="cards">
       <li class="cards-item cards-item-450px">
         <div class="wrap masters-wrap">
-          <img
-            srcset="./images/our-master/our-masters-img1@1x.jpg 1x, ./images/our-master/our-masters-img1@2x.jpg 2x"
-            src="./images/our-master/our-masters-img1@1x.jpg"
-            alt="Имя Мастера"
-            class="img masters-img"
-          />
+          <img srcset="./images/our-master/our-masters-img1@1x.jpg 1x, ./images/our-master/our-masters-img1@2x.jpg 2x"
+            src="./images/our-master/our-masters-img1@1x.jpg" alt="Имя Мастера" class="img masters-img" />
         </div>
         <div class="master-information">
           <h3 class="master-name">John Smith</h3>
@@ -51,12 +47,8 @@
       </li>
       <li class="cards-item cards-item-450px">
         <div class="wrap masters-wrap">
-          <img
-            srcset="./images/our-master/our-masters-img2@1x.jpg 1x, ./images/our-master/our-masters-img2@2x.jpg 2x"
-            src="./images/our-master/our-masters-img2@1x.jpg"
-            alt="Имя Мастера"
-            class="img masters-img"
-          />
+          <img srcset="./images/our-master/our-masters-img2@1x.jpg 1x, ./images/our-master/our-masters-img2@2x.jpg 2x"
+            src="./images/our-master/our-masters-img2@1x.jpg" alt="Имя Мастера" class="img masters-img" />
         </div>
         <div class="master-information">
           <h3 class="master-name">Michele Doe</h3>
@@ -95,12 +87,8 @@
       </li>
       <li class="cards-item cards-item-450px">
         <div class="wrap masters-wrap">
-          <img
-            srcset="./images/our-master/our-masters-img3@1x.jpg 1x, ./images/our-master/our-masters-img3@2x.jpg 2x"
-            src="./images/our-master/our-masters-img3@1x.jpg"
-            alt="Имя Мастера"
-            class="img masters-img"
-          />
+          <img srcset="./images/our-master/our-masters-img3@1x.jpg 1x, ./images/our-master/our-masters-img3@2x.jpg 2x"
+            src="./images/our-master/our-masters-img3@1x.jpg" alt="Имя Мастера" class="img masters-img" />
         </div>
         <div class="master-information">
           <h3 class="master-name">Alan Black</h3>
