добавляет атрибут секции

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -23,9 +23,9 @@
     </div>
 
     <!-- <include src="./partials/contacts.html"></include> -->
-    <div class="section contact">
+    <div id="contacts" class="section contact">
       <div class="container">
-        <h2 id="contacts" class="section-title section-title--white footer-title">Контакты</h2>
+        <h2 class="section-title section-title--white footer-title">Контакты</h2>
         <div class="contact-position">
           <address class="address">
             <ul class="address-list">
