--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -1,7 +1,7 @@
-<section class="section master-section">
+<section id="masters" class="section master-section">
   <div class="container master-container">
     <div class="section-description-box">
-      <p id="masters" class="section-description black-color">для настоящих ценителей атмосферы</p>
+      <p class="section-description black-color">для настоящих ценителей атмосферы</p>
       <h2 class="section-title masters-title">Наши мастера</h2>
     </div>
     <ul class="cards">
