--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,4 @@
-<section class="section about">
+<section id="about-us" class="section about">
   <div class="container about">
     <div class="image-wrapper">
       <div class="about-gallery">
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="about-block">
-      <p id="about-us" class="section-description about">О НАС</p>
+      <p class="section-description about">О НАС</p>
       <h2 class="section-title about">Лучший Барбершоп твоего города</h2>
       <p class="about-desc">
         Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.
