--- a/src/sass/layouts/_masters.scss
+++ b/src/sass/layouts/_masters.scss
@@ -7,6 +7,7 @@
   max-width: 450px;
   margin-left: auto;
   margin-right: auto;
+
   @media screen and (min-width: $desktop) {
     max-width: 100%;
   }
@@ -15,9 +16,11 @@
 .section-description.black-color {
   color: $black-text-color;
 }
+
 .masters-title {
   margin-bottom: 44px;
 }
+
 .masters-wrap {
   height: 346px;
   width: 100%;
@@ -44,6 +47,7 @@
   text-align: center;
   letter-spacing: 0.02em;
 }
+
 .master-information {
   // text-align: center;
   padding-left: 30px;
@@ -52,4 +56,16 @@
   padding-bottom: 30px;
 
   color: $accent-color;
+}
+
+.masters-img {
+  width: 418px;
+
+  @media screen and (min-width: $tablet) and (max-width: calc(#{$desktop} - 1px)) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 370px;
+  }
 }
