--- a/src/sass/components/_menu-mob.scss
+++ b/src/sass/components/_menu-mob.scss
@@ -3,6 +3,10 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+
+  @media screen and (min-width: $tablet) {
+    padding-top: 7px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -13,6 +17,9 @@
   .nav-button {
     display: inline-flex;
     margin-left: auto;
+    margin-top: 8px;
+    margin-top: 8px;
+
     z-index: 5;
 
     padding: 0px;
@@ -37,7 +44,7 @@
     display: none;
     position: absolute;
     z-index: 4;
-    top: -30px;
+    top: -40px;
     right: 0;
     width: 70%;
 
@@ -47,8 +54,8 @@
 
     padding-top: 60px;
     padding-bottom: 60px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 40px;
+    padding-right: 40px;
 
     font-size: 20px;
     border-top: 1px solid #ececec;
@@ -74,9 +81,9 @@
     margin-top: 64px;
   }
 
-  .menu.is-open .nav-contact {
-    margin-top: 20px;
-  }
+  // .menu.is-open .nav-contact {
+  //   margin-top: 20px;
+  // }
 
   .menu.is-open .pseudo-socials {
     margin-top: 64px;
