--- a/src/sass/components/_slider-button.scss
+++ b/src/sass/components/_slider-button.scss
@@ -1,68 +1,72 @@
 .slider-btn {
   padding-left: 0px;
   padding-right: 0px;
-	padding-bottom: 30px;
-	padding-top: 30px;
-	margin: 0px;
-	border: none;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  margin: 0px;
+  border: none;
 
-	font-weight: 600;
-	font-size: 11px;
-	line-height: 1.36;
-	text-align: right;
-	letter-spacing: 0.1em;
-	cursor: pointer;
-	color: #ffffff;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  text-align: right;
+  letter-spacing: 0.1em;
+  cursor: pointer;
+  color: #ffffff;
 
-	background-color: transparent;
+  background-color: transparent;
 }
 
 .slider-button-list {
-	display: flex;
-	align-items: flex-end;
-	margin-left: auto;
+  position: absolute;
+  bottom: 40px;
+  right: 40px;
 
-	@media screen and( max-width: 767px) {
-		display: none;
-	}
+  display: flex;
+  align-items: flex-end;
+  margin-left: auto;
+
+  @media screen and( max-width: 767px) {
+    display: none;
+  }
 }
 
 .slider-button-item {
-	position: relative;
+  position: relative;
 
-	display: flex;
-	width: 60px;
+  display: flex;
+  width: 60px;
 
-	&:nth-child(2n) {
-		justify-content: flex-end;
-	}
+  &:nth-child(2n) {
+    justify-content: flex-end;
+  }
 
-	&:not(:last-child) {
-		margin-right: 10px;
-	}
+  &:not(:last-child) {
+    margin-right: 26px;
+  }
 }
 
 .slider-button-item .slider-btn--left {
-	text-align: left;
-	color: rgba(157, 164, 189, 0.6);
+  text-align: left;
+  color: rgba(157, 164, 189, 0.6);
 }
 
 .slider-btn--right {
-	text-align: right;
+  text-align: right;
 }
 
 .slider-btn::after {
-	content: "";
-	position: absolute;
-	bottom: 0;
-	left: 0;
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
 
-	display: inline-block;
-	width: 60px;
-	height: 1px;
-	background-color: #fff;
+  display: inline-block;
+  width: 60px;
+  height: 1px;
+  background-color: #fff;
 }
 
 .slider-btn.slider-btn--left::after {
-	background: rgba(157, 164, 189, 0.6);
+  background: rgba(157, 164, 189, 0.6);
 }
