--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -8,35 +8,35 @@
       <li class="cards-item cards-item-450px">
         <div class="wrap masters-wrap">
           <img srcset="./images/our-master/our-masters-img1@1x.jpg 1x, ./images/our-master/our-masters-img1@2x.jpg 2x"
-            src="./images/our-master/our-masters-img1@1x.jpg" alt="Имя Мастера" class="img masters-img" />
+            src="./images/our-master/our-masters-img1@1x.jpg" alt="Имя Мастера" class="img masters-img">
         </div>
         <div class="master-information">
           <h3 class="master-name">John Smith</h3>
           <p class="master-specialist">Extreme Barber</p>
           <ul class="social-list">
             <li class="social-link">
-              <a href="" aria-label="Instagram" class="link">
+              <a href="#" aria-label="Instagram" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" aria-label="Twitter" class="link">
+              <a href="#" aria-label="Twitter" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" aria-label="Facebook" class="link">
+              <a href="#" aria-label="Facebook" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" aria-label="Linkedin" class="link">
+              <a href="#" aria-label="Linkedin" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
@@ -48,35 +48,35 @@
       <li class="cards-item cards-item-450px">
         <div class="wrap masters-wrap">
           <img srcset="./images/our-master/our-masters-img2@1x.jpg 1x, ./images/our-master/our-masters-img2@2x.jpg 2x"
-            src="./images/our-master/our-masters-img2@1x.jpg" alt="Имя Мастера" class="img masters-img" />
+            src="./images/our-master/our-masters-img2@1x.jpg" alt="Имя Мастера" class="img masters-img">
         </div>
         <div class="master-information">
           <h3 class="master-name">Michele Doe</h3>
           <p class="master-specialist">Extreme Barber</p>
           <ul class="social-list">
             <li class="social-link">
-              <a href="" aria-label="Instagram" class="link">
+              <a href="#" aria-label="Instagram" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" aria-label="Twitter" class="link">
+              <a href="#" aria-label="Twitter" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" aria-label="Facebook" class="link">
+              <a href="#" aria-label="Facebook" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" aria-label="Linkedin" class="link">
+              <a href="#" aria-label="Linkedin" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
@@ -88,35 +88,35 @@
       <li class="cards-item cards-item-450px">
         <div class="wrap masters-wrap">
           <img srcset="./images/our-master/our-masters-img3@1x.jpg 1x, ./images/our-master/our-masters-img3@2x.jpg 2x"
-            src="./images/our-master/our-masters-img3@1x.jpg" alt="Имя Мастера" class="img masters-img" />
+            src="./images/our-master/our-masters-img3@1x.jpg" alt="Имя Мастера" class="img masters-img">
         </div>
         <div class="master-information">
           <h3 class="master-name">Alan Black</h3>
           <p class="master-specialist">Extreme Barber</p>
           <ul class="social-list">
             <li class="social-link">
-              <a href="" aria-label="Instagram" class="link">
+              <a href="#" aria-label="Instagram" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" aria-label="Twitter" class="link">
+              <a href="#" aria-label="Twitter" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" aria-label="Facebook" class="link">
+              <a href="#" aria-label="Facebook" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" aria-label="Linkedin" class="link">
+              <a href="#" aria-label="Linkedin" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
