--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -24,7 +24,7 @@
 
     <!-- <include src="./partials/contacts.html"></include> -->
     <div class="section contact">
-      <div class="container">
+      <div class="container contact-container">
         <h2 id="contacts" class="section-title section-title--white footer-title">Контакты</h2>
         <div class="contact-position">
           <address class="address">
