изменяет марджины на правые и ставит тег br

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -26,7 +26,7 @@
     </div>
     <div class="about-block">
       <p class="section-description about">О НАС</p>
-      <h2 class="section-title about">Лучший Барбершоп твоего города</h2>
+      <h2 class="section-title about">Лучший Барбершоп <br> твоего города</h2>
       <p class="about-desc">
         Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.
       </p>
