--- a/src/sass/layouts/_about-us.scss
+++ b/src/sass/layouts/_about-us.scss
@@ -62,8 +62,8 @@
     height: 445px;
     flex-direction: row;
 
-    &:not(:first-child) {
-      margin-left: 30px;
+    &:not(:last-child) {
+      margin-right: 30px;
       margin-bottom: 0;
     }
   }
