опять всё стилизировал кроме бек  дропа, модалки и отцентрированого хедера

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,8 +30,8 @@
 
 			<div class="pseudo-socials">
 				<ul class="pseudo-socials-list">
-					<li class="pseudo-socials-item current"><a href="#" class="pseudo-socials-link">Instagram</a></li>
-					<li class="pseudo-socials-item"><a href="#" class="pseudo-socials-link">Youtube</a></li>
+					<li class="pseudo-socials-item current"><a href="https://www.instagram.com" class="pseudo-socials-link" target="_blank">Instagram</a></li>
+					<li class="pseudo-socials-item"><a href="https://www.youtube.com" class="pseudo-socials-link" target="_blank" >Youtube</a></li>
 				</ul>
 			</div>
 		</div>
