--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,10 +3,10 @@
     <div class="hero-aside">
       <ul class="hero-social-list">
         <li class="hero-social-item">
-          <a href="#" class="hero-social-link">Instagram</a>
+          <a href="https://www.instagram.com" class="hero-social-link" target="_blank">Instagram</a>
         </li>
         <li class="hero-social-item">
-          <a href="#" class="hero-social-link">Youtube</a>
+          <a href="https://www.youtube.com" class="hero-social-link" target="_blank">Youtube</a>
         </li>
       </ul>
     </div>
