--- a/src/sass/components/_menu-mob.scss
+++ b/src/sass/components/_menu-mob.scss
@@ -41,11 +41,11 @@
   }
 
   .menu {
-    display: none;
+    opacity: 0;
     position: absolute;
     z-index: 4;
     top: -40px;
-    right: 0;
+    right: -1px;
     width: 70%;
 
     height: 680px;
@@ -63,6 +63,7 @@
   }
 
   .menu.is-open {
+    opacity: 1;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -81,20 +82,37 @@
     margin-top: 64px;
   }
 
-  // .menu.is-open .nav-contact {
-  //   margin-top: 20px;
-  // }
-
   .menu.is-open .pseudo-socials {
     margin-top: 64px;
     text-align: left;
   }
 
+  .menu.is-open .pseudo-socials-link {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.35;
+
+    letter-spacing: 0.2em;
+
+    color: #303030;
+
+    &:hover,
+    &:focus {
+      color: #ff6c00;
+      transition: $timing-function;
+    }
+  }
   .menu.is-open .pseudo-socials-item:not(:last-of-type) {
     margin-bottom: 24px;
   }
 
   .menu.is-open .pseudo-socials-list {
+    @media screen and (max-width: 479px) {
+      padding-left: 80px;
+    }
+
     padding-left: 100px;
     position: relative;
   }
