--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -50,8 +50,30 @@
   padding-bottom: 12px;
 }
 
+.nav-item {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 1.39;
+  text-align: center;
+  letter-spacing: 0.1em;
+
+  color: #303030;
+
+  @media screen and (min-width: $mobile) {
+    font-size: 18px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    color: #fff;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.1em;
+  }
+}
+
 .nav-item:not(:last-child) {
-  
   @media screen and (min-width: $tablet) {
     margin-right: 24px;
   }
@@ -65,21 +87,22 @@
   font-family: Open Sans;
   font-style: normal;
   font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 15px;
+  line-height: 1.33;
   letter-spacing: 0.1em;
 
-  color: black;
+  color: #303030;
 
   margin-top: 0px;
 
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: $mobile) {
     font-size: 18px;
-    line-height: 1.33;
-    
+    line-height: 16px;
+    letter-spacing: 0.1em;
   }
 
   @media screen and (min-width: $tablet) and (max-width: 1279px) {
+    font-size: 12px;
     margin-top: 20px;
     color: #fff;
   }
@@ -87,6 +110,7 @@
     padding-top: 13px;
     padding-bottom: 13px;
     margin-right: 40px;
+    font-size: 12px;
     color: #fff;
   }
 }
@@ -114,13 +138,19 @@
 .contacts .button {
   color: black;
   transition: $timing-function;
-  
+
   &:hover {
     color: white;
     transition: $timing-function;
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 479px) {
+    padding: 10px 10px;
+    margin-top: 24px;
+    width: 100%;
+  }
+
+  @media screen and (min-width: $mobile) and (max-width: 767px) {
     margin-top: 24px;
     padding: 12px 37px;
     min-width: 160px;
@@ -151,11 +181,15 @@
   line-height: 1.35;
   color: #303030;
   transition: $timing-function;
-  &:hover {
+  
+  &:hover,
+  &:focus {
     color: #ff6c00;
     transition: $timing-function;
   }
 }
+
+
 
 .nav-link:hover,
 .nav-link:focus {
