--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,6 +1,5 @@
 .hero {
   min-height: 680px;
-  
 }
 
 .container-hero {
@@ -78,10 +77,14 @@
   font-family: Raleway;
   font-style: normal;
   font-weight: bold;
-  font-size: 48px;
+  font-size: 45px;
   line-height: 1.16;
   letter-spacing: 0.05em;
   color: #ffffff;
+
+  @media screen and (min-width: $mobile)  {
+    font-size: 48px;
+  }
 
   @media screen and (min-width: $desktop) {
     font-size: 72px;
@@ -95,16 +98,24 @@
   width: 320px;
 
   color: #9da4bd;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.62;
+
+  @media screen and (min-width: $mobile) {
+    font-size: 16px;
+  }
 
   @media screen and (min-width: $tablet) {
     width: 420px;
   }
+   @media screen and (min-width: $desktop) {
+    font-size: 18px;
+    
+  }
 }
 
 .hero .section-description {
- color: rgba(157, 164, 189, 0.6);
+  color: rgba(157, 164, 189, 0.6);
 }
 
 .hero-social-list {
@@ -121,7 +132,7 @@
 
   &:hover,
   &:focus {
-    color: #FF6C00;
+    color: #ff6c00;
   }
 }
 
@@ -129,6 +140,14 @@
   display: block;
   transform: scaleX(-1);
   transition: $timing-function;
+
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.2em;
+  color: #303030;
 
   &:hover {
     color: #ff6c00;
@@ -140,7 +159,7 @@
   content: "";
 
   position: absolute;
-  top: -50%;
+  top: -135%;
   left: 50px;
 
   display: inline-block;
