изменены картинка на 24 шт, нифига вроде не работает

--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -15,28 +15,28 @@
           <p class="master-specialist">Extreme Barber</p>
           <ul class="social-list">
             <li class="social-link">
-              <a href="#" aria-label="Instagram" class="link">
+              <a href="https://www.instagram.com/?hl=ru" target="_blank" aria-label="Instagram" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="#" aria-label="Twitter" class="link">
+              <a href="https://twitter.com/explore" target="_blank" aria-label="Twitter" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="#" aria-label="Facebook" class="link">
+              <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="#" aria-label="Linkedin" class="link">
+              <a href="https://ru.linkedin.com/" target="_blank" aria-label="Linkedin" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
@@ -55,28 +55,28 @@
           <p class="master-specialist">Extreme Barber</p>
           <ul class="social-list">
             <li class="social-link">
-              <a href="#" aria-label="Instagram" class="link">
+              <a href="https://www.instagram.com/?hl=ru" target="_blank" aria-label="Instagram" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="#" aria-label="Twitter" class="link">
+              <a href="https://twitter.com/explore" target="_blank" aria-label="Twitter" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="#" aria-label="Facebook" class="link">
+              <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="#" aria-label="Linkedin" class="link">
+              <a href="https://ru.linkedin.com/" target="_blank" aria-label="Linkedin" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
@@ -95,28 +95,28 @@
           <p class="master-specialist">Extreme Barber</p>
           <ul class="social-list">
             <li class="social-link">
-              <a href="#" aria-label="Instagram" class="link">
+              <a href="https://www.instagram.com/?hl=ru" target="_blank" aria-label="Instagram" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="#" aria-label="Twitter" class="link">
+              <a href="https://twitter.com/explore" target="_blank" aria-label="Twitter" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="#" aria-label="Facebook" class="link">
+              <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="#" aria-label="Linkedin" class="link">
+              <a href="https://ru.linkedin.com/" target="_blank" aria-label="Linkedin" class="link">
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
