--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,26 +1,54 @@
 <section class="section">
   <div class="container">
-    <h3 id="gallery" class="section-description">На латинском языке “барба” означает “борода”</h3>
+    <p class="section-description gallery-description">На латинском языке “барба” означает “борода”</p>
     <ul class="gallery-list">
       <li class="gallery-item">
-        <img srcset="./images/gallery/gallery-tel1@1x.jpg 1x,
-                       ./images/gallery/gallery-tel1@2x.jpg 2x" src="./images/gallery/gallery-tel1@1x.jpg"
-          alt="Мастер стрижет машинкой под ножницы мужчину" class="img-wrapper img">
+        <picture>
+          <source srcset="./images/gallery/gallery-tel1@1x.jpg 1х,
+                                ./images/gallery/gallery-tel1@2x.jpg 2x" media="(max-width: 767px)" />
+          <source srcset="./images/gallery/gallery-tab1@1x.jpg 1х,
+                                ./images/gallery/gallery-tab1@2x.jpg 2x" media="(max-width:1279px)" />
+          <source srcset="./images/gallery/gallery-img1@1x.jpg 1х,
+                                ./images/gallery/gallery-img1@2x.jpg 2x" media="(min-width: 1280px)" />
+          <img src="./images/gallery/gallery-tel1@1x.jpg" alt="Мастер стрижет машинкой под ножницы мужчину"
+            class="img-wrapper img">
+        </picture>
       </li>
       <li class="gallery-item">
-        <img srcset="./images/gallery/gallery-tel2@1x.jpg 1x,
-                       ./images/gallery/gallery-tel2@2x.jpg 2x" src="./images/gallery/gallery-tel2@1x.jpg"
-          alt="Мастер наносит пену для брьтья на бороду клиента" class="img-wrapper img">
+        <picture>
+          <source srcset="./images/gallery/gallery-tel2@1x.jpg 1х,
+                                ./images/gallery/gallery-tel2@2x.jpg 2x" media="(max-width: 767px)" />
+          <source srcset="./images/gallery/gallery-tab2@1x.jpg 1х,
+                                ./images/gallery/gallery-tab2@2x.jpg 2x" media="(max-width:1279px)" />
+          <source srcset="./images/gallery/gallery-img2@1x.jpg 1х,
+                                ./images/gallery/gallery-img2@2x.jpg 2x" media="(min-width: 1280px)" />
+          <img src="./images/gallery/gallery-tel2@1x.jpg" alt="Мастер наносит пену для брьтья на бороду клиента"
+            class="img-wrapper img">
+        </picture>
       </li>
       <li class="gallery-item">
-        <img srcset="./images/gallery/gallery-tel3@1x.jpg 1x,
-                       ./images/gallery/gallery-tel3@2x.jpg 2x" src="./images/gallery/gallery-tel3@1x.jpg"
-          alt="Мастер промакивает полотенцем лицо клиента" class="img-wrapper img">
+        <picture>
+          <source srcset="./images/gallery/gallery-tel3@1x.jpg 1х,
+                                ./images/gallery/gallery-tel3@2x.jpg 2x" media="(max-width: 767px)" />
+          <source srcset="./images/gallery/gallery-tab3@1x.jpg 1х,
+                                ./images/gallery/gallery-tab3@2x.jpg 2x" media="(max-width:1279px)" />
+          <source srcset="./images/gallery/gallery-img3@1x.jpg 1х,
+                                ./images/gallery/gallery-img3@2x.jpg 2x" media="(min-width: 1280px)" />
+          <img src="./images/gallery/gallery-tel3@1x.jpg" alt="Мастер промакивает полотенцем лицо клиента"
+            class="img-wrapper img">
+        </picture>
       </li>
       <li class="gallery-item">
-        <img srcset="./images/gallery/gallery-tel4@1x.jpg 1x,
-                       ./images/gallery/gallery-tel4@2x.jpg 2x" src="./images/gallery/gallery-tel4@1x.jpg"
-          alt="Мастер работает над прической клиента" class="img-wrapper img">
+        <picture>
+          <source srcset="./images/gallery/gallery-tel4@1x.jpg 1х,
+                                ./images/gallery/gallery-tel4@2x.jpg 2x" media="(max-width: 767px)" />
+          <source srcset="./images/gallery/gallery-tab4@1x.jpg 1х,
+                                ./images/gallery/gallery-tab4@2x.jpg 2x" media="(max-width:1279px)" />
+          <source srcset="./images/gallery/gallery-img4@1x.jpg 1х,
+                                ./images/gallery/gallery-img4@2x.jpg 2x" media="(min-width: 1280px)" />
+          <img src="./images/gallery/gallery-tel4@1x.jpg" alt="Мастер работает над прической клиента"
+            class="img-wrapper img">
+        </picture>
       </li>
     </ul>
   </div>
