--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -1,8 +1,8 @@
 <section id="price" class="section price">
   <div class="container">
-    <h3 class="section-description section-discription--gray">
+    <p class="section-description section-discription--gray">
       Проведи время в компании лучших
-      мастеров</h3>
+      мастеров</p>
     <h2 class="price-title section-title section-title--white">Услуги и цены</h2>
     <div class="price-content">
       <ul class="price-list text-price">
