--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,29 +1,25 @@
 <section id="about-us" class="section about">
   <div class="container about">
-    <div class="image-wrapper">
-      <div class="about-gallery">
-
-        <img src="./images/about-us/about-us-desktop1@2x.jpg" alt="стрижка бороды" class="img about" width="270"
-          srcset="./images/about-us/about-us-desktop1@1x.jpg 1x, ./images/about-us/about-us-desktop1@2x.jpg 2x" />
-      </div>
-      <div class="about-gallery">
-        <img src="./images/about-us/about-us-desktop2@2x.jpg" alt="стрижка бороды" class="img about" width="270"
-          srcset="./images/about-us/about-us-desktop2@1x.jpg 1x, ./images/about-us/about-us-desktop2@2x.jpg 2x" />
-
-      </div>
-    </div>
-    <div class="image-wrapper tablet">
-      <div class="about-gallery">
-
-        <img src="./images/about-us/about-us-img1@2x.jpg" alt="стрижка бороды" class="img about" width="330"
-          srcset="./images/about-us/about-us-img1@1x.jpg 1x, ./images/about-us/about-us-img1@2x.jpg 2x" />
-      </div>
-      <div class="about-gallery">
-        <img src="./images/about-us/about-us-img2@2x.jpg" alt="стрижка бороды" class="img about" width="330"
-          srcset="./images/about-us/about-us-img2@1x.jpg 1x, ./images/about-us/about-us-img2@2x.jpg 2x" />
-
-      </div>
-    </div>
+    <ul class="image-wrapper">
+      <li class="about-gallery">
+        <picture>
+          <source srcset="./images/about-us/about-us-img1@1x.jpg 1x , ./images/about-us/about-us-img1@2x.jpg 2x"
+            media="(max-width:1279px)" width="330" height="235">
+          <source srcset="./images/about-us/about-us-desktop1@1x.jpg 1x , ./images/about-us/about-us-desktop1@2x.jpg 2x"
+            media="(min-width: 1280px)" width="270" height="445">
+          <img class="img about " src="./images/about-us/about-us-img1@1x.jpg " alt="стрижка бороды ">
+        </picture>
+      </li>
+      <li class="about-gallery">
+        <picture>
+          <source srcset="./images/about-us/about-us-img2@1x.jpg 1x , ./images/about-us/about-us-img2@2x.jpg 2x"
+            media="(max-width:1279px)" width="330" height="235">
+          <source srcset="./images/about-us/about-us-desktop2@1x.jpg 1x , ./images/about-us/about-us-desktop2@2x.jpg 2x"
+            media="(min-width: 1280px)" width="270" height="445">
+          <img class="img about " src="./images/about-us/about-us-img2@1x.jpg " alt="стрижка бороды ">
+        </picture>
+      </li>
+    </ul>
     <div class="about-block">
       <p class="section-description about">О НАС</p>
       <h2 class="section-title about">Лучший Барбершоп твоего города</h2>
