--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,11 +6,11 @@
       <form class="form">
         <div class="form-wrap">
           <div class="form-field">
-            <input type="text" class="form-input" name="name" id="name" placeholder=" " />
+            <input type="text" pattern="^[А-Яа-яЁё\s]+$" class="form-input" name="name" id="name" placeholder=" " />
             <label for="name" class="form-label">имя*</label>
           </div>
           <div class="form-field">
-            <input type="tel" class="form-input" name="tel" id="tel" placeholder=" " />
+            <input type="tel" pattern="[0-9]{5,10}" class="form-input" name="tel" id="tel" placeholder=" " />
             <label for="tel" class="form-label">телефон*</label>
           </div>
         </div>
