--- a/src/sass/layouts/_feature.scss
+++ b/src/sass/layouts/_feature.scss
@@ -58,6 +58,10 @@
   padding: 20px 25px;
   background-color: $section-bgc;
 
+  @media screen and (max-width: 350px) {
+    padding: 20px 10px;
+  }
+
   @media screen and (min-width: $tablet) {
     padding: 20px 35px;
   }
