--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,18 +2,18 @@
 	<div class="container header-container">
 		<a href="./index.html" class="logo">
 			<svg class="icon-logo" width="69" height="55" alt="Логотип компании">
-				<use href="../src/images/sprite.svg#icon-logo"></use>
+				<use href="../src/images/sprite.svg#icon-logo" ></use>
 			</svg>
 		</a>
 
-		<button type="button" class="nav-button is-open" data-menu-button>
-			<svg class="menu-icon" width="40" height="40" aria-label="переключатель мобильного меню">
-				<use class="menu-icon-open" href="./images/sprite.svg#menu-icon-open"></use>
-				<use class="menu-icon-close" href="./images/sprite.svg#menu-icon-close"></use>
+		<button type="button" class="nav-button " data-menu-button data-modal-open  >
+			<svg class="menu-icon" width="40" height="40" aria-label="переключатель мобильного меню" >
+				<use class="menu-icon-open" href="./images/sprite.svg#menu-icon-open"  ></use>
+				<use class="menu-icon-close" href="./images/sprite.svg#menu-icon-close"  ></use>
 			</svg>
 		</button>
 
-		<div class="menu is-open" data-menu>
+		<div class="menu " data-menu modal>
 			<nav class="nav">
 				<ul class="nav-list">
 					<li class="nav-item"><a href="#about-us" class="nav-link">О нас</a></li>
