--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -4,18 +4,18 @@
       <li class="about-gallery">
         <picture>
           <source srcset="./images/about-us/about-us-img1@1x.jpg 1x , ./images/about-us/about-us-img1@2x.jpg 2x"
-            media="(max-width:1279px)" width="330" height="235">
+            media="(max-width:1279px)">
           <source srcset="./images/about-us/about-us-desktop1@1x.jpg 1x , ./images/about-us/about-us-desktop1@2x.jpg 2x"
-            media="(min-width: 1280px)" width="270" height="445">
+            media="(min-width: 1280px)">
           <img class="img about " src="./images/about-us/about-us-img1@1x.jpg " alt="стрижка бороды ">
         </picture>
       </li>
       <li class="about-gallery">
         <picture>
           <source srcset="./images/about-us/about-us-img2@1x.jpg 1x , ./images/about-us/about-us-img2@2x.jpg 2x"
-            media="(max-width:1279px)" width="330" height="235">
+            media="(max-width:1279px)">
           <source srcset="./images/about-us/about-us-desktop2@1x.jpg 1x , ./images/about-us/about-us-desktop2@2x.jpg 2x"
-            media="(min-width: 1280px)" width="270" height="445">
+            media="(min-width: 1280px)">
           <img class="img about " src="./images/about-us/about-us-img2@1x.jpg " alt="стрижка бороды ">
         </picture>
       </li>
