ссылка с кнопки в поле нейм

--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -49,7 +49,9 @@
       </ul>
     </div>
     <div class="price-button-box">
-      <button class="button">онлайн-запись</button>
+      <form action="#name">
+        <button class="button">онлайн-запись</button>
+      </form>
     </div>
   </div>
 </section>
