--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,7 +7,7 @@
         <div class="form-wrap">
           <div class="form-field">
             <input type="text" pattern="^[А-Яа-яЁё\s]+$" class="form-input" name="name" id="name" placeholder=" " />
-            <label for="name" class="form-label">имя*</label>
+            <label for="name" class="form-label" id="name">имя*</label>
           </div>
           <div class="form-field">
             <input type="tel" pattern="[0-9]{5,10}" class="form-input" name="tel" id="tel" placeholder=" " />
