--- a/src/sass/components/_text.scss
+++ b/src/sass/components/_text.scss
@@ -6,7 +6,7 @@
   font-size: 18px;
   line-height: 1.67;
   letter-spacing: 0.02em;
-  color: #555555;
+  color: $main-text-color;
 }
 
 .text-secondary {
