--- a/src/sass/components/_aside.scss
+++ b/src/sass/components/_aside.scss
@@ -10,7 +10,7 @@
 
   width: 155px;
 
-  background-color: #ffffff;
+  background-color: $white-text-color;
 
   @media screen and (max-width: 767px) {
     display: none;
