--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -5,7 +5,7 @@
   border: none;
   padding: 12px 20px;
   background-color: transparent;
-  border: 1px solid #ff6c00;
+  border: 1px solid $accent-color;
   border-radius: 25px;
 
   font-size: 12px;
