--- a/src/sass/components/_social.scss
+++ b/src/sass/components/_social.scss
@@ -13,7 +13,7 @@
   fill: $accent-color;
 }
 .social-icon {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms $timing-function;
   width: 20px;
   height: 20px;
   margin: 12px;
