--- a/src/sass/utils/_backdrop.scss
+++ b/src/sass/utils/_backdrop.scss
@@ -42,7 +42,7 @@
 //   height: 100%;
 //   background-color: rgba(49, 48, 46, 0.5);
 
-//   transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1) 0.2s;
+//   transition: opacity 0.5s $timing-function 0.2s;
 //   opacity: 1;
 //   overflow-y: scroll;
 // }
@@ -50,7 +50,7 @@
 // .backdrop.is-hidden {
 //   pointer-events: none;
 
-//   transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1) 2s;
+//   transition: opacity 0.5s $timing-function 2s;
 //   opacity: 0;
 // }
 
