--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -60,7 +60,7 @@
             </ul>
           </address>
           <div class="working-hours">
-            <h3 class="section-description section-discription--white">время работы</h3>
+            <p class="section-description section-discription--white">время работы</p>
             <p class="working-hours-text">Ежедневно с 9:00 до 22:00</p>
           </div>
         </div>
