--- a/src/sass/components/_form-footer.scss
+++ b/src/sass/components/_form-footer.scss
@@ -91,6 +91,7 @@
   border-bottom: 1px solid $footer-modal-text;
   background-color: transparent;
 
+  outline: none;
   font-family: inherit;
   color: $white-text-color;
 
