--- a/src/partials/copyright.html
+++ b/src/partials/copyright.html
@@ -2,10 +2,10 @@
   <div class="container copyright-container">
     <ul class="social-text-list">
       <li class="social-text-item">
-        <a href="#" class="social-text-link">Instagram</a>
+        <a href="https://www.instagram.com/" target="_blank" class="social-text-link">Instagram</a>
       </li>
       <li class="social-text-item">
-        <a href="#" class="social-text-link">Youtube</a>
+        <a href="https://www.youtube.com/" target="_blank" class="social-text-link">Youtube</a>
       </li>
     </ul>
     <p class="copyright-text">&copy; Copyright 2020</p>
