убрал дополнительный класс на section-description

--- a/src/partials/feature.html
+++ b/src/partials/feature.html
@@ -1,7 +1,7 @@
 <section class="section">
     <div class="container feature-container">
         <div class="feature-block-first">
-            <p id="feature" class="section-description subtitle">старая традиционная школа</p>
+            <p id="feature" class="section-description">старая традиционная школа</p>
             <h2 class="section-title feature-title">Почему приходят именно к нам?</h2>
             <p class="feature-text text-main">О нас говорят только хорошее. Но лучше
                 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
