фикс героя, и неудачный код модалки

--- a/src/sass/utils/_backdrop.scss
+++ b/src/sass/utils/_backdrop.scss
@@ -21,3 +21,13 @@
     opacity: 0;
   }
 }
+
+.backdrop-row {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  z-index: 4;
+}
