--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,7 +24,7 @@
 			</nav>
 
 			<div class="contacts">
-				<button type="button" class="button">онлайн-запись</button>
+				<button type="button" class="button" data-modal-open data-menu-button >онлайн-запись</button>
 				<a href="tel:+380441111111" class="nav-contact">+38 044 111 11 11</a>
 			</div>
 
