--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,7 +1,3 @@
-.hero {
-  min-height: 680px;
-}
-
 .container-hero {
   position: relative;
 
@@ -59,9 +55,17 @@
 
   color: white;
 
+  @media screen and (max-width: 479px) {
+    max-width: 250px;
+  }
+
+  @media screen and (min-width: $mobile) and (max-width: calc(#{$desktop} - 1px)) {
+    max-width: 305px;
+  }
+
   @media screen and (min-width: $tablet) and (max-width: $desktop) {
     margin-left: 220px;
-    width: 355px;
+    max-width: 355px;
   }
 
   @media screen and (min-width: $desktop) {
@@ -82,6 +86,10 @@
   letter-spacing: 0.05em;
   color: $white-text-color;
 
+  @media screen and (max-width: 479px) {
+    font-size: 39px;
+  }
+
   @media screen and (min-width: $mobile) {
     font-size: 48px;
   }
@@ -95,11 +103,14 @@
 .hero-subtitle {
   margin-bottom: 0px;
   margin-top: 0px;
-  width: 320px;
-
+  
   color: $secondary-grey-color;
   font-size: 12px;
   line-height: 1.62;
+
+  @media screen and (max-width: 479px) {
+    font-size: 11px;
+  }
 
   @media screen and (min-width: $mobile) {
     font-size: 16px;
@@ -115,6 +126,9 @@
 
 .hero .section-description {
   color: $header-price-text;
+   @media screen and (max-width: 479px) {
+    font-size: 9px;
+  }
 }
 
 .hero-social-list {
