--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -42,6 +42,7 @@
 @import "./components/aside";
 @import "./components/text";
 @import "./components/social";
+@import "./components/modal";
 @import "./components/form-footer";
 @import "./components/address";
 @import "./components/copyright";
