--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -2,7 +2,7 @@
   position: relative;
   margin: auto;
 
-  width: 528px;
+  max-width: 528px;
   padding: 40px;
 
   //   background: $background-color;
