Добавлена ссылка на онлайн запись

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -31,7 +31,9 @@
         нашего мастера, то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне".
         Поэтому, мы всегда готовы усовершенствовать каждого, кто к нам приходит!
       </p>
-      <button class="button button--white">онлайн-запись</button>
+      <form action="#name">
+        <button class="button button--white">онлайн-запись</button>
+      </form>
     </div>
   </div>
 </section>
