--- a/src/sass/components/_form-footer.scss
+++ b/src/sass/components/_form-footer.scss
@@ -38,6 +38,7 @@
   border-bottom: 1px solid $footer-modal-text;
 
   font-family: inherit;
+  font-size: 16px;
 
   transition: border-color 250ms $timing-function;
 }
